@@ -128,11 +128,13 @@ char16restart(void)
 #if !defined( __SDCC_pdk14) && !defined( __SDCC_pdk15) // Lack of memory
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL))
 	static mbstate_t ps;
-	char16_t c16[2];
+	char16_t c16[3];
 	char c[MB_LEN_MAX];
 
 	c[0] = 'C';
 	ASSERT(mbrtoc16(c16, c, 1, &ps) == 1);
+	c[1] = 0;
+	ASSERT(mbrtoc16(c16 + 1, c + 1, 1, &ps) == 0); // Also puts ps back into the initial conversion state.
 	ASSERT(c16[0] == (u"C")[0]);
 	ASSERT(c16rtomb(c, c16[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
@@ -167,11 +169,13 @@ char32restart(void)
 #if !defined( __SDCC_pdk14) && !defined( __SDCC_pdk15) // Lack of memory
 #if defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L
 	static mbstate_t ps;
-	char32_t c32[2];
+	char32_t c32[3];
 	char c[MB_LEN_MAX];
 
 	c[0] = 'C';
 	ASSERT(mbrtoc32(c32, c, 1, &ps) == 1);
+	c[1] = 0;
+	ASSERT(mbrtoc32(c32 + 1, c + 1, 1, &ps) == 0); // Also puts ps back into the initial conversion state.
 	ASSERT(c32[0] == (U"C")[0]);
 	ASSERT(c32rtomb(c, c32[0], &ps) == 1);
 	ASSERT(c[0] == 'C');
